fix button alignement

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -8,9 +8,9 @@
 
 #buttons {
   display: grid;
-  grid-template-columns: repeat(7, 60px);
+  grid-template-columns: repeat(7, 70px);
   grid-template-rows: repeat(1, 30px);
-  gap: 20px;
+  gap: 10px;
   justify-content: center;
   padding: 10px;
   border-radius: 30px;
